Added expiration date

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -22,4 +22,5 @@
 es:
   invalid_product: "Producto Inválido"
   invalid_license: "Licencia Inválida"
-  limit_reached: "La licencia ha alcanzado su límite de usos (#)"
+  limit_reached: "La licencia ha alcanzado su límite de # usos."
+  expired: "La licencia ha expirado (#)."
