--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -24,3 +24,4 @@ es:
   invalid_license: "Licencia Inválida"
   limit_reached: "La licencia ha alcanzado su límite de # usos"
   expired: "La licencia ha expirado (#)"
+  trial_limit: "Ya has pedido una licencia de prueba"
