--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -20,8 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 es:
-  invalid_product: "Producto Inválido"
-  invalid_license: "Licencia Inválida"
+  invalid_product: "Producto inválido"
+  invalid_license: "Licencia inválida"
   limit_reached: "La licencia ha alcanzado su límite de # usos"
   expired: "La licencia ha expirado (#)"
   trial_limit: "Ya has pedido una licencia de prueba"
