--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,5 +23,5 @@ en:
   invalid_product: "Invalid product"
   invalid_license: "Invalid license"
   limit_reached: "License has reached its limit of # activations"
-  expired: "License has expired (#)"
-  trial_limit: "You have already redeemed one trial license"
+  expired: "License has expired"
+  trial_limit: "You have previously already redeemed one trial license"
